--- a/index.htm
+++ b/index.htm
@@ -17,11 +17,25 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>    
+
   </head>
   <body>
     <div class="container-fluid">
       <div class="row h-75">
         <div class="col-12 m-0 p-0 bg-secondary">
+          <!-- <div class="img_black_overlay clip-path" id="video_cover"></div> -->
+          <svg width="100%" height="100%" id="svg_cover">
+            <defs>
+              <mask id="hole">
+                <rect width="100%" height="100%" fill="white"/>
+                <rect x="50%" y="50%" rx="10" ry="10" width="50px" height="50px" transform="translate(-15,-15)" id = "focus_rect"/>
+              </mask>
+            </defs>
+            <rect id="donut" width="100%" height="100%" fill="rgba(0, 0, 0, 0.5)" mask="url(#hole)" />
+          </svg>
           <video id="video" autoplay playsinline></video>
         </div>
       </div>
@@ -51,6 +65,6 @@
     <script src="js/adapter.min.js"></script>
     <script src="js/screenfull.min.js"></script>
     <script src="js/howler.core.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/c_main.js"></script>
   </body>
 </html>
