--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
             <defs>
               <mask id="hole">
                 <rect width="100%" height="100%" fill="white"/>
-                <rect x="50%" y="50%" rx="10" ry="10" width="50px" height="50px" transform="translate(-15,-15)" id = "focus_rect"/>
+                <rect x="50%" y="50%" rx="20" ry="20" width="50px" height="50px" transform="translate(-15,-15)" id = "focus_rect"/>
               </mask>
             </defs>
             <rect id="donut" width="100%" height="100%" fill="rgba(0, 0, 0, 0.5)" mask="url(#hole)" />
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="row h-25 align-items-center justify-content-center">
-        <button type="button" class="btn btn-success">shot</button>
+        <button type="button" id="takePhotoButton" class="btn btn-success">shot</button>
       </div>
       <!-- <div id="vid_container">
         <video id="video" autoplay playsinline></video>
