--- a/index.htm
+++ b/index.htm
@@ -14,54 +14,86 @@
     <title>Chao's mobile CAM </title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- Google Fonts -->
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"> -->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- Material Design Bootstrap -->
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet"> -->
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>    
+    <!-- JQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+    <!-- load TensorFlow js -->
+    <script src="./js/tf.min.js.download"> </script>
+    <script src="./js/util.js.download"> </script>
 
   </head>
+
   <body>
-    <div class="container-fluid">
-      <div class="row h-75">
-        <div class="col-12 m-0 p-0 bg-secondary">
-          <!-- <div class="img_black_overlay clip-path" id="video_cover"></div> -->
+    <div class="container-fluid m-0 p-0">
+      <div class="row h-100 m-0 p-0">
+        <div class="col-12 m-0 p-0 bg-secondary" id="mainDisplayDiv">
+          <canvas id="focusDiv"></canvas>
           <svg width="100%" height="100%" id="svg_cover">
             <defs>
               <mask id="hole">
                 <rect width="100%" height="100%" fill="white"/>
-                <rect x="50%" y="50%" rx="20" ry="20" width="50px" height="50px" transform="translate(-15,-15)" id = "focus_rect"/>
+                <rect rx="20" ry="20" id = "focus_rect"/>
               </mask>
             </defs>
             <rect id="donut" width="100%" height="100%" fill="rgba(0, 0, 0, 0.5)" mask="url(#hole)" />
           </svg>
+
           <video id="video" autoplay playsinline></video>
         </div>
+        <!-- hint for users -->
+        <p class="explain_text">please take a photo to recognise</p>
+        <!-- snapshot button -->
+        <button type="button" id="takePhotoButton" class="btn btn-success" onclick="takeSnapshot();">shot</button>
       </div>
-      <div class="row h-25 align-items-center justify-content-center">
-        <button type="button" id="takePhotoButton" class="btn btn-success">shot</button>
+
+      <!-- slider of prediction result -->
+      <div class="slider closed" id="sliderDiv">
+
+        <div class="row h-50 m-0">
+          <div class="btn-group-toggle btn-group btn-block" 
+              data-toggle="buttons"
+              id = "toggle_btns"
+              onchange="classify();">
+            <label class="btn btn-secondary active" name = "labels">
+              <input type="radio" name="options" id="option1" checked >
+              <div name="prediction_labels">prediction 1</div>
+            </label>
+            <label class="btn btn-secondary" name = "labels">
+              <input type="radio" name="options" id="option2"> 
+              <div name="prediction_labels">prediction 1</div>
+            </label>
+            <label class="btn btn-secondary" name = "labels">
+              <input type="radio" name="options" id="option3"> 
+              <div name="prediction_labels">prediction 1</div>m-
+            </label>
+          </div>
+        </div>
+        
+        <div class="row h-50 m-0">
+            <div class="col-3 align-self-center">
+              <button type="button" id="retakeButton" class="btn btn-success" onclick="retakePhoto();" >retake</button>
+            </div>
+            <div class="col-9 align-self-center">
+              <input type="range" id="slider_actMax" class="slideBar" min="0" max="50" value="34" width="224" oninput="set_act_max=parseFloat(this.value); drawSquare();"> 
+            </div>
+        </div>
+
       </div>
-      <!-- <div id="vid_container">
-        <video id="video" autoplay playsinline></video>
-        <div id="video_overlay"></div>
-      </div>
-      <div id="gui_controls">
-        <button
-          id="switchCameraButton"
-          name="switch Camera"
-          type="button"
-          aria-pressed="false"
-        ></button>
-        <button id="takePhotoButton" name="take Photo" type="button"></button>
-        <button
-          id="toggleFullScreenButton"
-          name="toggle FullScreen"
-          type="button"
-          aria-pressed="false"
-        ></button>
-      </div> -->
     </div>
+
     <script src="js/adapter.min.js"></script>
     <script src="js/screenfull.min.js"></script>
     <script src="js/howler.core.min.js"></script>
