--- a/index.htm
+++ b/index.htm
@@ -77,7 +77,7 @@
             </label>
             <label class="btn btn-secondary" name = "labels">
               <input type="radio" name="options" id="option3"> 
-              <div name="prediction_labels">prediction 1</div>m-
+              <div name="prediction_labels">prediction 1</div>
             </label>
           </div>
         </div>
