fixed btn group issues: 1. text centered 2. button rounded

--- a/index.htm
+++ b/index.htm
@@ -63,13 +63,10 @@
       <div class="slider closed" id="sliderDiv">
 
         <div class="row h-50 m-0">
-          <div class="btn-group-toggle btn-group btn-block" 
-              data-toggle="buttons"
-              id = "toggle_btns"
-              onchange="classify();">
+          <div class="btn-group-toggle btn-group btn-block" data-toggle="buttons" id = "toggle_btns" onchange="classify();">
             <label class="btn btn-secondary active" name = "labels">
               <input type="radio" name="options" id="option1" checked >
-              <div name="prediction_labels">prediction 1</div>
+              <div name="prediction_labels">prediction 1</div>              
             </label>
             <label class="btn btn-secondary" name = "labels">
               <input type="radio" name="options" id="option2"> 
