changed retake photo icon, change dot color to red

--- a/index.htm
+++ b/index.htm
@@ -85,7 +85,7 @@
         <div class="row h-50 m-0">
             <div class="col-3 align-self-center">
               <button type="button" id="retakeButton" class="btn btn-light btn-block" onclick="retakePhoto();" >
-                <i class="fas fa-camera-retro"></i>
+                <i class="fas fa-camera"></i>
               </button>
             </div>
             <div class="col-9 align-self-center">
