Try prohibit scrollingrevised the range value, slide to left shows more red rects

--- a/index.htm
+++ b/index.htm
@@ -89,7 +89,7 @@
               </button>
             </div>
             <div class="col-9 align-self-center">
-              <input type="range" id="slider_actMax" class="slideBar" min="0" max="50" value="34" width="224" oninput="set_act_max=parseFloat(this.value); drawSquare();">
+              <input type="range" id="slider_actMax" class="slideBar" min="0" max="50" value="34" width="224" oninput="set_act_max= 50 - parseFloat(this.value); drawSquare();">
               
             </div>
         </div>
