tried to fixed the scorlling by set body position fixed

--- a/index.htm
+++ b/index.htm
@@ -59,7 +59,9 @@
         <!-- hint for users -->
         <p id="hint_text">...</p>
         <!-- snapshot button -->
-        <button type="button" id="takePhotoButton" class="btn btn-success" onclick="takeSnapshot();">shot</button>
+        <button type="button" id="takePhotoButton" class="btn btn-light" onclick="takeSnapshot();">
+          <i class="fas fa-camera"></i>
+        </button>
       </div>
 
       <!-- slider of prediction result -->
