--- a/index.htm
+++ b/index.htm
@@ -71,15 +71,15 @@
           <div class="btn-group-toggle btn-group btn-block" data-toggle="buttons" id = "toggle_btns" onchange="classify();">
             <label class="btn btn-outline-light active" name = "labels">
               <input type="radio" name="options" id="option1" checked >
-              <div name="prediction_labels">prediction 1</div>              
+              <div name="prediction_labels">recognising</div>              
             </label>
             <label class="btn btn-outline-light" name = "labels">
               <input type="radio" name="options" id="option2"> 
-              <div name="prediction_labels">prediction 1</div>
+              <div name="prediction_labels">recognising</div>
             </label>
             <label class="btn btn-outline-light" name = "labels">
               <input type="radio" name="options" id="option3"> 
-              <div name="prediction_labels">prediction 1</div>
+              <div name="prediction_labels">recognising</div>
             </label>
           </div>
         </div>
@@ -91,8 +91,7 @@
               </button>
             </div>
             <div class="col-9 align-self-center">
-              <input type="range" id="slider_actMax" class="slideBar" min="0" max="50" value="34" width="224" oninput="set_act_max= 50 - parseFloat(this.value); drawSquare();">
-              
+              <input type="range" id="slider_actMax" class="slideBar" min="0" max="50" value="40" width="224" oninput="set_act_max= 50 - parseFloat(this.value); drawSquare();">
             </div>
         </div>
 
