added instruction image and more: 1. added instruction image 2. found a way to get rid of focus outline of button 3. set button DIV to bottom = 0

--- a/index.htm
+++ b/index.htm
@@ -123,6 +123,9 @@
         </div>
         <div class="modal-body">
           <p>A class activation map for a particular category indicates the discriminative image regions used by the CNN to identify that category.</p> 
+          <img class="img-fluid"
+          src="/img/image.jpg">
+          
           <p>More information can be found in  
             <a href="http://cnnlocalization.csail.mit.edu/">this paper</a>
           </p>
@@ -132,6 +135,7 @@
             <a href="https://www.ibiblio.org/e-notes/ml/notes.htm">TensorFlow.js notes</a> provided by 
             <a href="https://twitter.com/EvgenyDemidov">Evgeny Demidov</a>
           </p>
+          <img>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
