corrected change image path

--- a/index.htm
+++ b/index.htm
@@ -124,7 +124,7 @@
         <div class="modal-body">
           <p>A class activation map for a particular category indicates the discriminative image regions used by the CNN to identify that category.</p> 
           <img class="img-fluid"
-          src="/img/image.jpg">
+          src="./img/image.jpg">
           
           <p>More information can be found in  
             <a href="http://cnnlocalization.csail.mit.edu/">this paper</a>
