Changed text content, and disable zoom in

--- a/index.htm
+++ b/index.htm
@@ -119,23 +119,25 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">How AI thinks?</h5>
+          <h5 class="modal-title" id="exampleModalLabel">What is on AI's mind?</h5>
         </div>
         <div class="modal-body">
-          <p>A class activation map for a particular category indicates the discriminative image regions used by the CNN to identify that category.</p> 
+          <p>How does AI recognise an object? Is it different from human? Please take a photo of an object and check the attention of AI for the identification.
+          </p> 
           <img class="img-fluid"
           src="./img/image.jpg">
           
-          <p>More information can be found in  
+          <p>
+            This app is made by 
+            <a href="https://chaoswang.wordpress.com/">Chao Wang</a> based on a technique called Class Activation Map, which can visualise the attention of Convolutional Neural Network to identify an object. More information can be found in  
             <a href="http://cnnlocalization.csail.mit.edu/">this paper</a>
           </p>
-          <p>This website is made by 
+          <!-- <p>This website is made by 
             <a href="https://chaoswang.wordpress.com/">Chao Wang</a>
             based on the framework of 
             <a href="https://www.ibiblio.org/e-notes/ml/notes.htm">TensorFlow.js notes</a> provided by 
             <a href="https://twitter.com/EvgenyDemidov">Evgeny Demidov</a>
-          </p>
-          <img>
+          </p> -->
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -143,8 +145,6 @@
       </div>
     </div>
   </div>
-
-
     <script src="js/adapter.min.js"></script>
     <script src="js/screenfull.min.js"></script>
     <script src="js/howler.core.min.js"></script>
