changed text content

--- a/index.htm
+++ b/index.htm
@@ -122,12 +122,14 @@
           <h5 class="modal-title" id="exampleModalLabel">What is on AI's mind?</h5>
         </div>
         <div class="modal-body">
-          <p>How does AI recognise an object? Is it different from human? Please take a photo of an object and check the attention of AI for the identification.
+          <p>How does AI recognize an object? Try to take a photo of any object you like, and compare if you and AI focus on the same area to identify it.
+            <br>
           </p> 
           <img class="img-fluid"
           src="./img/image.jpg">
           
           <p>
+            <br>
             This app is made by 
             <a href="https://chaoswang.wordpress.com/">Chao Wang</a> based on a technique called Class Activation Map, which can visualise the attention of Convolutional Neural Network to identify an object. More information can be found in  
             <a href="http://cnnlocalization.csail.mit.edu/">this paper</a>
