--- a/index.htm
+++ b/index.htm
@@ -103,7 +103,7 @@
         <div class="row h-50 m-0">
             <div class="col-3 align-self-center">
               <button type="button" id="retakeButton" class="btn btn-light btn-block" onclick="retakePhoto();" >
-                <i class="fas fa-camera"></i>
+                <i class="fas fa-arrow-left"></i>
               </button>
             </div>
             <div class="col-9 align-self-center">
