changed the image text, change my link

--- a/index.htm
+++ b/index.htm
@@ -131,7 +131,7 @@
           <p>
             <br>
             This app is made by 
-            <a href="https://chaoswang.wordpress.com/">Chao Wang</a> based on a technique called Class Activation Map, which can visualise the attention of Convolutional Neural Network to identify an object. More information can be found in  
+            <a href="https://www.linkedin.com/in/chao-wang-259b052b/">Chao Wang</a> based on a technique called Class Activation Map, which can visualise the attention of Convolutional Neural Network to identify an object. More information can be found in  
             <a href="http://cnnlocalization.csail.mit.edu/">this paper</a>
           </p>
           <!-- <p>This website is made by 
