added google analysis, change info button css

--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,6 @@
 <html>
   <head>
+
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -11,6 +12,17 @@
     />
     <meta name="keywords" content="tensorflow.js, WebRTC, Camera" />
     <meta name="author" content="Chao Wang" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168006878-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-168006878-2');
+    </script>
+
     <title>Chao's mobile CAM </title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 
