--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,7 @@
                 <rect rx="20" ry="20" id = "focus_rect"/>
               </mask>
             </defs>
-            <rect id="donut" width="100%" height="100%" fill="rgba(0, 0, 0, 0.5)" mask="url(#hole)" />
+            <rect id="donut" width="100%" height="100%" fill="rgba(0, 0, 0, 0.6)" mask="url(#hole)" />
           </svg>
 
           <video id="video" autoplay playsinline></video>
@@ -77,6 +77,7 @@
         <div class="col-4 d-flex justify-content-center align-items-center">
           <input type="checkbox" id="modeSwitch"/>
           <label id="switchLabel" for="modeSwitch">Toggle</label>
+          <i class="fas fa-eye-slash"></i>
         </div>
         <div class="col-4 d-flex justify-content-center align-items-center">
           <!-- snapshot button -->
