--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
     />
     <meta name="keywords" content="tensorflow.js, WebRTC, Camera" />
     <meta name="author" content="Chao Wang" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168006878-2"></script>
