--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,8 @@
     <meta name="keywords" content="tensorflow.js, WebRTC, Camera" />
     <meta name="author" content="Chao Wang" />
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168006878-2"></script>
