change ios fullscreen bar to black

--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
     <meta name="keywords" content="tensorflow.js, WebRTC, Camera" />
     <meta name="author" content="Chao Wang" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
