modified the instruction of home page

--- a/index.htm
+++ b/index.htm
@@ -152,6 +152,9 @@
             This app is made by 
             <a href="https://www.linkedin.com/in/chao-wang-259b052b/">Chao Wang</a> based on a technique called Class Activation Map, which can visualise the attention of Convolutional Neural Network to identify an object. More information can be found in  
             <a href="http://cnnlocalization.csail.mit.edu/">this paper</a>
+            <br>
+            The MobileNet surgery part is based on Evgeny Demidov's 
+            <a href="https://www.ibiblio.org/e-notes/ml/webgl/heat_daisy.htm">CNN Heat Maps</a>
           </p>
         </div>
         <div class="modal-footer">
