--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           </defs>
           <rect id="donut" width="100%" height="100%" fill="rgba(0, 0, 0, 0.6)" mask="url(#hole)" />
         </svg>
-        
-        <div class="col-12 m-0 p-0 bg-secondary" id="mainDisplayDiv">
+
+        <div id="mainDisplayDiv">
           <video id="video" autoplay playsinline></video>
         </div>
         <!-- hint for users -->
